# emit

./: .commitlintrc.json  .gitignore  CLAUDE.md  LICENSE  index.html  package-lock.json  package.json  ruler.html  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.agentkit/: config.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: architect.md  docs.md  implementer.md  reviewer.md  tester.md
.claude/hooks/: log-tool-usage.sh  validate-commit.sh
.claude/rules/: code-style.md  commit-rules.md  testing.md
.github/workflows/: release.yml
scripts/: postinstall.sh
src/: App.tsx  main.tsx  ruler-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  command_schema.rs  commands.rs  frecency.rs  icons.rs  launcher.rs  lib.rs  main.rs  settings.rs  shortcuts.rs  undo.rs  window.rs
src-tauri/src/extensions/: bitwarden.rs  color_picker.rs  crypto.rs  env_vault.rs  ioreg.rs  manifest.rs  mod.rs  notion.rs  password_generator.rs  perf_battery.rs  perf_gpu.rs  perf_monitor.rs  perf_store.rs  port_pilot.rs  registry.rs  ruler.rs  screenshot.rs  vault_crypto.rs  window_management.rs
src-tauri/src/providers/: applications.rs  builtin.rs  calculator.rs  clipboard.rs  files.rs  mod.rs  web_search.rs
src/assets/extension-icons/: index.ts
src/components/: AppViewRouter.tsx
src/components/Bitwarden/: Bitwarden.css  Bitwarden.tsx
src/components/ClipboardManager/: ClipboardManager.css  ClipboardManager.tsx
src/components/ColorPicker/: ColorPicker.css  ColorPicker.tsx
src/components/CommandMode/: CommandMode.css  CommandMode.tsx  FollowUpBar.tsx  UndoToast.tsx
src/components/EmptyState/: EmptyState.css  (+1 more)
src/hooks/: useAutoUpdate.ts  useCommandMode.ts  useCommandParser.ts  useKeyboardNav.ts  usePerfMonitor.ts  useSearch.ts
src/lib/: color.ts  format.ts  groupByCategory.ts  icons.ts  search.ts  tauri.ts  types.ts
src/styles/: app.css  emit-theme.css  reset.css  tokens.css
src/ui/: ActionBar.css  ActionBar.tsx  Badge.css  Badge.tsx  Button.css  Button.tsx  CommandIcon.css  CommandIcon.tsx  GradientText.css  GradientText.tsx  HighlightedText.tsx  Input.tsx  Kbd.css  Kbd.tsx  ListItem.css  ListItem.tsx  SectionHeader.tsx  Select.css  Select.tsx  TabNav.css  TabNav.tsx  Text.css  Text.tsx  Toggle.css  Toggle.tsx  ViewContainer.css  ViewContainer.tsx  index.ts
(+55 files in other folders)
