[package]
name = "emit"
version = "0.1.0"
description = "Spotlight-style command launcher for macOS"
authors = ["InfamousVague"]
license = "MIT"
repository = "https://github.com/InfamousVague/emit"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "emit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
fuzzy-matcher = "0.3"
