[package]
name = "emit"
version = "0.2.6"
description = "Spotlight-style command launcher for macOS"
authors = ["InfamousVague"]
license = "MIT"
repository = "https://github.com/InfamousVague/emit"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "emit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
base64 = "0.22"
fuzzy-matcher = "0.3"
async-trait = "0.1"
dirs = "5"
tokio = { version = "1", features = ["process", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
ring = "0.17"
hostname = "0.4"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
sha1 = "0.10"
rand = "0.8"
image = "0.25"
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSObject", "NSString", "NSData", "NSDictionary", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication", "NSColorSampler", "NSColor", "NSColorSpace", "NSPasteboard", "NSImage", "NSBitmapImageRep", "NSWorkspace", "NSGraphicsContext", "NSScreen"] }
block2 = "0.6"
core-graphics = "0.24"
core-graphics-types = "0.2"
core-foundation = "0.10"
